--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -502,10 +502,10 @@
                                             <Setter Property="MaxWidth">
                                                 <Setter.Value>
                                                     <Binding
-                                                        RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=materialDesign:Card}"
+                                                        RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=TreeView}"
                                                         Path="ActualWidth"
                                                         Converter="{StaticResource DoubleConstantSubConverter}"
-                                                        ConverterParameter="180"/>
+                                                        ConverterParameter="140"/>
                                                 </Setter.Value>
                                             </Setter>
                                         </Style>
