--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -315,7 +315,7 @@
 
                     <materialDesign:Card
                         x:Name="ConverterTaskCard"
-                        Grid.Row="2"
+                        Grid.Row="1"
                         Margin="20 10 10 20">
                         <Grid>
                             <DockPanel x:Name="FileDropPanel" Visibility="{Binding Visibility, ElementName=TaskListView, Converter={StaticResource ReversedVisibilityConverter}}">
@@ -538,7 +538,6 @@
                                         </DataTemplate>
                                     </StackPanel.Resources>
                                     <TreeView
-                                        Height="{Binding HasItems, ElementName=InputOptionsTreeView, Converter={StaticResource BooleanSwitchOperationConverter}, ConverterParameter=Auto;0}"
                                         Visibility="{Binding HasItems, ElementName=InputOptionsTreeView, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <TreeViewItem
                                             x:Name="InputOptionsTreeView"
@@ -553,7 +552,7 @@
                                                         ToolTip="{Binding IsExpanded, ElementName=InputOptionsTreeView, Converter={StaticResource BooleanSwitchOperationConverter}, ConverterParameter=点击收起;点击展开}"
                                                         MouseDown="TreeViewHeader_Click"/>
                                                     <TextBlock Style="{StaticResource TreeViewHeaderComment}" Text="["/>
-                                                    <TextBlock VerticalAlignment="Center" Style="{StaticResource TreeViewHeaderComment}" Margin="7 2 0 0">
+                                                    <TextBlock Style="{StaticResource TreeViewHeaderComment}" Margin="7 2 0 0">
                                                         <TextBlock.Text>
                                                             <Binding Path="SelectedInputPlugin.Format" StringFormat="{}导入自 {0}"/>
                                                         </TextBlock.Text>
@@ -567,7 +566,6 @@
                                         </TreeViewItem>
                                     </TreeView>
                                     <TreeView
-                                        Height="{Binding HasItems, ElementName=OutputOptionsTreeView, Converter={StaticResource BooleanSwitchOperationConverter}, ConverterParameter=Auto;0}"
                                         Visibility="{Binding HasItems, ElementName=OutputOptionsTreeView, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <TreeViewItem
                                             x:Name="OutputOptionsTreeView"
@@ -582,7 +580,7 @@
                                                         ToolTip="{Binding IsExpanded, ElementName=InputOptionsTreeView, Converter={StaticResource BooleanSwitchOperationConverter}, ConverterParameter=点击收起;点击展开}"
                                                         MouseDown="TreeViewHeader_Click"/>
                                                     <TextBlock Style="{StaticResource TreeViewHeaderComment}" Text="["/>
-                                                    <TextBlock VerticalAlignment="Center" Style="{StaticResource TreeViewHeaderComment}" Margin="7 2 0 0">
+                                                    <TextBlock Style="{StaticResource TreeViewHeaderComment}" Margin="7 2 0 0">
                                                         <TextBlock.Text>
                                                             <Binding Path="SelectedOutputPlugin.Format" StringFormat="{}导出为 {0}"/>
                                                         </TextBlock.Text>
@@ -626,7 +624,7 @@
 
                     <materialDesign:Card
                         x:Name="TaskExecutionCard"
-                        Grid.Row="2"
+                        Grid.Row="1"
                         Margin="10 10 20 20">
                         <Grid>
                             <Grid.RowDefinitions>
@@ -663,8 +661,8 @@
                                     IsEnabled="{Binding ExecutionInProgress, Converter={StaticResource InvertBooleanConverter}}"
                                     ToolTip="{Binding IsChecked, ElementName=ExportToSourceMenuItem, Converter={StaticResource BooleanSwitchOperationConverter}, ConverterParameter=当前已设置默认输出至源路径。修改此项将临时更换一次输出路径。;}" Cursor="Arrow"/>
                             </DockPanel>
-                            <WrapPanel Grid.Row="2" Margin="7 0 0 7" Orientation="Horizontal" VerticalAlignment="Stretch">
-                                <StackPanel Grid.Row="1" Margin="10 0 10 0" Height="26" Orientation="Horizontal" VerticalAlignment="Center">
+                            <WrapPanel Grid.Row="2" Grid.Column="0" Margin="7 0 0 7" Orientation="Horizontal" VerticalAlignment="Stretch">
+                                <StackPanel Margin="10 0 10 0" Height="26" Orientation="Horizontal" VerticalAlignment="Center">
                                     <ToggleButton
                                         x:Name="OpenExportFolderToggle"
                                         VerticalAlignment="Center"
@@ -675,7 +673,7 @@
                                         IsChecked="{Binding OpenExportFolder}"/>
                                     <TextBlock x:Name="OpenExportFolderText" VerticalAlignment="Center" Margin="0" Text="完成后打开输出路径" FontSize="14" Opacity="0.8"/>
                                 </StackPanel>
-                                <StackPanel Grid.Row="1" Margin="10 0 10 0" Height="26" Orientation="Horizontal" VerticalAlignment="Center">
+                                <StackPanel Margin="10 0 10 0" Height="26" Orientation="Horizontal" VerticalAlignment="Center">
                                     <TextBlock x:Name="OverwriteOptionText" VerticalAlignment="Center" Margin="2 0 2 0" Text="遇到同名文件时" FontSize="14" Opacity="0.8"/>
                                     <ComboBox
                                         x:Name="OverwriteOptionComboBox"
