--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/themes/materialdesigntheme.popupbox.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/themes/materialdesigntheme.chip.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/primary/materialdesigncolor.indigo.xaml"/>
+                <ResourceDictionary Source="ScrollBarDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <local:NotNullConverter x:Key="NotNullConverter"/>
             <local:IndexToBooleanConverter x:Key="IndexToBooleanConverter"/>
