支持在未设置默认导出路径时记忆上一次使用的路径；修复 bug，改进 UI

--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -662,7 +662,7 @@
                                     FontSize="16"
                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                     IsEnabled="{Binding ExecutionInProgress, Converter={StaticResource InvertBooleanConverter}}"
-                                    ToolTip="使用“${src}”可指代源路径"
+                                    ToolTip="在开头插入“${src}”可指代源路径，例如“${src}/custom/relative/path”"
                                     Cursor="Arrow"/>
                             </DockPanel>
                             <WrapPanel Grid.Row="2" Grid.Column="0" Margin="7 0 0 7" Orientation="Horizontal" VerticalAlignment="Stretch">
